--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,51 @@
----
-name: Hello World
-## The name field specifies the name of the workflow
+name: Test Job
+
 on: 
-  # the on field determines when the workflow should be triggered
-  # in this case when the  git repo is pushed to main branch then the event triggerred
-  push:   # Push is the event that is going to the event
-    branches: # it is the post condition in which 
-      - main
-  
-# the job field define one or more jobs to be executed in parallel
-# in this case my_job is the job name
+  push:
+    branches: [main]
+
 jobs:
   my-job:
-  # job_name "my_job" runs of the VM Ubuntu Latest Environment
     runs-on: ubuntu-latest
 
     steps:
-    # this steps field contains a lsit of individual steps to be executed in the job
-
     - name: Print hello On Push
-      # name of of a step
       run: echo "Hello, Who is there to push on my Repository"
-      # despite of runner this run specifies the shell command or script
+
+  build:
+    runs-on: ubuntu-lastest
+    steps:
+    - name: Somebody Push
+    - run: echo "Let, me know who perform Push Event"
+
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with: 
+        php-version: 8.2
+
+    - name: Install Node.Js
+      ## Node Js is require for laravel compiling and building
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20.x
+
+    - name: Install PHP dependency Manager
+      uses: "ramsey/composer-install@v2"
+
+  Install_Dependencies:
+      runs-on: ubuntu-lastest
+      steps:
+      - name: Install PHP Dependencies
+        run: composer install
+
+      - name: Install Js Dependencies
+        run: npm install
+  Hello:
+    runs-on: ubuntu-lastest
+    steps:
+    - name: Does it reach upto here
+      run: echo "Okie Catch it" 
+    
