--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,44 +5,32 @@ on:
     branches: [main]
 
 jobs:
-  my-job:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Print hello On Push
-        run: echo "Hello, Who is there to push on my Repository"
-
-  SW_Configs:
-    runs-on: ubuntu-latest
-    needs: my-job
-    steps:
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with: 
-          php-version: 8.2
-      - name: Setup Apache
-        run: |
-          sudo apt install apache2 -y
-
-  build:
-    runs-on: ubuntu-latest
-    needs: SW_Configs
-    steps:
-      - name: Somebody Push
-        run: echo "Let me know who performed the Push Event"
-
-      - name: Remove content from /html/
-        run: |
-          sudo rm -rf /var/www/html/*
-
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          path: '/var/www/html'
 
   Hello:
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Does it reach up to here
-        run: echo "Okay, catch it"
+        run: echo "Okay, catch it, Someone pushed"
+
+
+  SSH_Setup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: SSH
+        run: |
+          echo "${{secrets.IMROSHAN_AUTHKEY_VRG}}" >> imroshan_authkey_vrg.pem
+          chmod 400 imroshan_authkey_vrg.pem
+  SSH-ing:
+    runs-on: ubuntu-latest
+    needs: SSH_Setup
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Copy file to EC2 instance
+      run: |
+        scp -i imroshan_authkey_vrg.pem \
+        -o StrictHostKeyChecking=no \
+        -o UserKnownHostsFile=/dev/null \
+        -r ./* ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_IP_ADDRESS }}:/home/ubuntu/app/
