--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,6 @@ jobs:
       - name: Does it reach up to here
         run: echo "Okay, catch it, Someone pushed"
 
-
   SSH_Setup:
     runs-on: ubuntu-latest
     needs: Hello
@@ -34,4 +33,4 @@ jobs:
         scp -i imroshan_authkey_vrg.pem \
         -o StrictHostKeyChecking=no \
         -o UserKnownHostsFile=/dev/null \
-        -r ./* ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_IP_ADDRESS }}:/home/ubuntu/app/
+        -r ./* ${{ secrets.INSTANCE_USER }}@${{ secrets.INSTANCE_IP }}:/home/ubuntu/
