--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,10 +16,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: Hello
     steps:
-      - name: SSH
-        run: |
-          echo "${{secrets.IMROSHAN_AUTHKEY_VRG}}" >> imroshan_authkey_vrg.pem
-          chmod 400 imroshan_authkey_vrg.pem
+    
+    - name: Set up Node.js version
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18.x'
+    - name: SSH
+      run: |
+        echo "${{secrets.IMROSHAN_AUTHKEY_VRG}}" >> imroshan_authkey_vrg.pem
+        chmod 400 imroshan_authkey_vrg.pem
   SSH-ing:
     runs-on: ubuntu-latest
     needs: SSH_Setup
