--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,8 @@
 name: Test Job
-
 on:
   push:
     branches: [main]
-
 jobs:
-
   Hello:
     runs-on: ubuntu-latest
     steps:
@@ -16,32 +13,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: Hello
     steps:
-    
-    - name: SSH
-      run: |
-        echo "${{secrets.IMROSHAN_AUTHKEY_VRG}}" >> imroshan_authkey_vrg.pem
-        chmod 600 imroshan_authkey_vrg.pem
+      - name: Setup SSH key
+        run: |
+          echo "${{ secrets.IMROSHAN_AUTHKEY_VRG }}" > imroshan_authkey_vrg.pem
+          chmod 400 imroshan_authkey_vrg.pem
   SSH-ing:
     runs-on: ubuntu-latest
     needs: SSH_Setup
-
     steps:
-    - name: SSH
-      run: |
-        echo "${{secrets.IMROSHAN_AUTHKEY_VRG}}" >> imroshan_authkey_vrg.pem
-        chmod 600 imroshan_authkey_vrg.pem
-    
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    - name: Set up Node.js version
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Copy file to EC2 instance
-      run: |
-        scp -i imroshan_authkey_vrg.pem \
-        -o StrictHostKeyChecking=no \
-        -o UserKnownHostsFile=/dev/null \
-        -r ./* ${{ secrets.INSTANCE_USER }}@${{ secrets.INSTANCE_IP }}:/home/ubuntu/
+      - name: Copy file to EC2 instance
+        run: |
+          echo "$SSH_PRIVATE_KEY" > imroshan_authkey_vrg.pem
+          chmod 400 imroshan_authkey_vrg.pem
+          scp -i imroshan_authkey_vrg.pem \
+            -o StrictHostKeyChecking=no \
+            -o UserKnownHostsFile=/dev/null \
+            -r ./* ${{ secrets.INSTANCE_USER }}@${{ secrets.INSTANCE_IP }}:/home/ubuntu/
