--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,12 +23,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          node-version: '16'
 
       - name: Copy file to EC2 instance
         run: |
           echo "$SSH_PRIVATE_KEY" > imroshan_authkey_vrg.pem
           sudo chmod 400 imroshan_authkey_vrg.pem
-          sudo scp -i imroshan_authkey_vrg.pem \
-            -o StrictHostKeyChecking=no \
-            -o UserKnownHostsFile=/dev/null \
-            -r ./* ubuntu@54.157.237.164:/home/ubuntu/
+          sudo scp -i imroshan_authkey_vrg.pem -r ./* ubuntu@54.157.237.164:/home/ubuntu/
