--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,4 +28,4 @@ jobs:
         run: |
           echo "$IMROSHAN_AUTHKEY_VRG" > imroshan_authkey_vrg.pem
           sudo chmod 400 imroshan_authkey_vrg.pem
-          sudo scp -i imroshan_authkey_vrg.pem -r ./* ubuntu@54.157.237.164:/home/ubuntu/
+          sudo ssh -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164
