--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,15 @@ on:
   push:
     branches: [main]
 jobs:
-  Hello:
+  Test:
     runs-on: ubuntu-latest
     steps:
       - name: Does it reach up to here
         run: echo "Okay, catch it, Someone pushed"
 
-  SSH_Setup:
+  Deploy:
     runs-on: ubuntu-latest
-    needs: Hello
+    needs: Test
     
     steps:
     - name: Checkout code
