--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,11 @@ jobs:
 
       - name: Install MySQL
         run: |
-          sudo apt-get update
           sudo apt-get install -y mysql-server
+          
+      - name: Install MySQL Client
+        run: |
+          sudo apt-get install -y mysql-client
 
       - name: Root Password
         run: |
