--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,8 @@ jobs:
 
     - name: Install Apache on Server
       run: |
-          ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg ubuntu@54.157.237.164 'sudo apt-get install -y apache2 '
+          ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 'sudo apt-get install -y apache2 '
 
     - name: Install MariaDB
       run: |
-          ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg ubuntu@54.157.237.164 sudo apt-get update -y && sudo apt-get install mariadb-server -y'
-
-
+          ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 sudo apt-get update -y && sudo apt-get install mariadb-server -y'
