--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,17 +17,26 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up SSH key
+      run: |
+        echo "${{ secrets.IMROSHAN_AUTHKEY_VRG }}" >> imroshan_authkey_vrg.pem
+        chmod 600 imroshan_authkey_vrg.pem
+    - name: Copy files to EC2 instance
+      run: |
+            scp -i imroshan_authkey_vrg.pem \
+            -o StrictHostKeyChecking=no \
+            -o UserKnownHostsFile=/dev/null \
+            -r ./* ubuntu@54.157.237.164:/home/ubuntu
     - name: Install Apache on Server
       run: |
-          sudo apt-get install -y apache2 
+          ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 'sudo apt-get install -y apache2 '
     - name: Install MariaDB
       run: |
-          sudo apt-get update -y && sudo apt-get install mariadb-server -y
-
+          ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 'sudo apt-get update -y && sudo apt-get install mariadb-server -y'
 
     - name: Configure MySQL
       run: |
-          sudo mysql_secure_installation <<EOF
+          ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 'sudo mysql_secure_installation <<EOF
           Y
           ugra3194
           ugra3194
@@ -35,4 +44,4 @@ jobs:
           Y
           Y
           Y
-          EOF
+          EOF'
