--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,6 @@ jobs:
           
     - name: Create MySQL Database
       run: |
-        ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 'mysql -h 54.157.237.164 -u root -pugra3194 -e "CREATE DATABASE chatapp;" '
+        ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 'mysql -h 54.157.237.164 -u root - ugra3194 -e "CREATE DATABASE chatapp;" '
 
 
