--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,10 +60,20 @@ jobs:
             send \"Y\r\"
             expect eof
           "'
-          
+           
+    - name: Execute MySQL commands
+      run: |
+        ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 '
+          sudo mysql -u root -p -e "
+            CREATE USER '\''new_user'\''@'\''localhost'\'' IDENTIFIED BY '\''your_password'\'';
+            CREATE DATABASE new_db;
+            GRANT ALL PRIVILEGES ON new_db.* TO '\''new_user'\''@'\''localhost'\'';
+            FLUSH PRIVILEGES;
+            exit;
+          "
+        '
+
     - name: Start MySQL service
       run: |
           ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 'sudo systemctl start mysql'
-          
-
-
+         
