--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,9 @@ jobs:
             expect \"Set root password? \[Y/n\]:\"
             send \"Y\r\"
             expect \"New password:\"
-            send \"Set-your-new-password\r\"
+            send \"ugra3194\r\"
             expect \"Re-enter new password:\"
-            send \"Set-your-new-password\r\"
+            send \"ugra3194\r\"
             expect \"Remove anonymous users? \[Y/n\]:\"
             send \"Y\r\"
             expect \"Disallow root login remotely? \[Y/n\]:\"
