--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@54.157.237.164 '
           sudo mysql -e "
             CREATE USER '\''ugra'\''@'\''localhost'\'' IDENTIFIED BY '\''ugra3194'\'';
-            CREATE DATABASE new_db;
+            CREATE DATABASE IF NOT EXISTS chatapp;
             GRANT ALL PRIVILEGES ON new_db.* TO '\''new_user'\''@'\''localhost'\'';
             FLUSH PRIVILEGES;
             exit;
