--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,11 +106,11 @@ jobs:
         '           
     - name: Move php  inside /var/www/html
       run: | 
-        ssh -o StrictHostChecking=no -i imroshan_authkey_vrg.pem ubuntu@52.91.16.27 '
+        ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@52.91.16.27 '
           sudo rm /var/www/html/index.html
           sudo mv /home/ubuntu/* /var/www/html/
           '
     - name: Install PHP
       run: | 
-        ssh -o StrictHostChecking=no -i imroshan_authkey_vrg.pem ubuntu@52.91.16.27 'sudo apt install php -y'
+        ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@52.91.16.27 'sudo apt install php -y'
 
