--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,7 +107,7 @@ jobs:
     - name: Move php  inside /var/www/html
       run: | 
         ssh -o StrictHostKeyChecking=no -i imroshan_authkey_vrg.pem ubuntu@52.91.16.27 '
-          sudo rm /var/www/html/index.html
+          sudo rm -r /var/www/html/*
           sudo mv /home/ubuntu/* /var/www/html/
           '
     - name: Install PHP
